--- a/css/slyle.css
+++ b/css/slyle.css
@@ -40,7 +40,12 @@ max-width:1158px;
 padding:0 15px; 
 }
 
+/* header */
+
 .header-style {
+    position: sticky;
+    top: 0;
+    background-color:var(--color-white);
     border-bottom: 1px solid  #e7e9fc;
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 
     0px 1px 1px rgba(46, 47, 66, 0.16), 
@@ -93,6 +98,7 @@ gap: 40px;
 }
 
 .site-nav .link {
+    position: relative;
     display: block;
     padding-top: 24px;
     padding-bottom: 24px;
@@ -103,19 +109,31 @@ gap: 40px;
     letter-spacing: 0.02em;
 }
 
-.site-nav li .item:last-child { 
-    margin-right: 0;
+.site-nav-link::after {
+    content:"";
+    display: block;
+    position: absolute;
+    /* bottom: 0; */
+    top: 44px;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    /* background-color: #404BBF; */
+    border-radius: 2px;
+
 }
 
-.site-nav .item:hover,
-.site-nav .item:focus {
-    color: var(--color-ocean);
+.site-nav-link.current::after {
+    content:"";
+    background-color: #404BBF;
+
 }
 
 .site-nav .link:hover, 
 .site-nav .link:focus {
     color: var(--color-ocean);
 }
+
 
 .address a {
     color: var(--primery-text-color);
