--- a/css/slyle.css
+++ b/css/slyle.css
@@ -553,6 +553,69 @@ margin-left: auto;
     background-color: var(--color-green);
 }
 
+/* MODAL WINDOW */
+
+.backdrop {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(46, 47, 66, 0.4);
+    backdrop-filter: blur(2px);
+}
+
+.modal {
+    position: absolute;
+    top: calc(50% - 292px);
+    left: calc( 50% - 204px );
+
+
+    width: 408px;
+    height: 584px;
+    background-color: var(--color-dairy);
+    border-radius: 4px;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 
+    0px 1px 3px rgba(0, 0, 0, 0.12), 
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+
+}
+
+
+/* position: absolute;
+
+left: 516px;
+top: 80px;
+
+/* DAIRY */
+
+/* background: #FCFCFC;
+
+ */ 
+.modal-close-btn {
+ position: absolute;
+ top: 24px;
+ right: 24px;
+
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ width: 24px;
+ height: 24px;
+ padding: 0;
+ border-radius: 50%;
+ background-color:  var(--color-cornflower);
+ border: 1px solid rgba(0, 0, 0, 0.1);
+ } 
+
+.modal-close-icon {
+  fill: var(--color-grey);
+} 
+
+
+
+
 /* PORFOLIO */
 
 .portfolio {
@@ -669,12 +732,12 @@ ul {
     height: 420px;
     flex-direction: column;
 }
-.card:hover,
+/* .card:hover,
 .card:focus {
     box-shadow:0px 1px 6px rgba(46, 47, 66, 0.08), 
     0px 1px 1px rgba(46, 47, 66, 0.16), 
     0px 2px 1px rgba(46, 47, 66, 0.08);
-}
+} */
 
 /*  */
 .card-tittle {
@@ -698,7 +761,9 @@ ul {
     0px 1px 1px rgba(46, 47, 66, 0.16), 
     0px 2px 1px rgba(46, 47, 66, 0.08);
 }
-
+.img-card {
+    max-width: 100%;
+}
 .link-title {
     color:var(--title-text-color);
     font-weight: 500;
@@ -716,6 +781,28 @@ ul {
     color: var(--primery-text-color);
     margin: 0;
 }
+/*  overlay */
+
+.card-thumb{
+    position: relative;
+    top: 0;
+    left: 0;
+}
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+    padding: 40px 32px;
+    background: #4D5AE5;
+}
+.overlay-text {
+ color: #FFFFFF;
+}
+
+background: #4D5AE5;
 
 /* footer */
 .footer-logo {
