--- a/css/slyle.css
+++ b/css/slyle.css
@@ -19,6 +19,8 @@
     --header-idx:10;
     --modal-idx:100;
 
+    --anim-first: 500ms, cubic-bezier(0.4, 0, 0.2, 1), 250ms;
+
 }
 
 /* main-page */
@@ -598,9 +600,14 @@ margin-left: auto;
     backdrop-filter: blur(2px);
     z-index: var(--modal-idx);
 
-    transition: opacity var() v ;
+    transition: opacity visibilitty;
+    transition-duration: 900ms;
+    transition-timing-function: ease-in-out;
+    transition-delay: 250ms;
+
+
 }
-.is-hidden {
+.backdrop.is-hidden {
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
@@ -610,8 +617,9 @@ margin-left: auto;
 
 .modal {
     position: absolute;
-    top: calc(50% - 292px);
-    left: calc( 50% - 204px );
+    top: calc(50% );
+    left: calc( 50% );
+    transform: translateX(-50%) translateY(-50%);
 
 
     width: 408px;
@@ -621,6 +629,14 @@ margin-left: auto;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 
     0px 1px 3px rgba(0, 0, 0, 0.12), 
     0px 2px 1px rgba(0, 0, 0, 0.2);
+
+    transition: opasity 250ms ease-in, transform 250ms ease-in;
+}
+.backdrop.is-hidden .modal{
+    opacity: 0;
+    transform: translateX(-50%) translateY(-80%);
+    transition-delay:0;
+
 
 }
 
@@ -652,9 +668,10 @@ top: 80px;
  background-color:  var(--color-cornflower);
  border: 1px solid rgba(0, 0, 0, 0.1);
 
-  transition-property: background-color;
-    transition-duration: 250ms;
+  transition-property: background-color, transform;
+    transition-duration: 250ms 500ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    
  } 
 
 .modal-close-icon {
@@ -668,12 +685,13 @@ top: 80px;
 .modal-close-btn:focus {
     background-color: #404BBF;
     color: var(--color-white);
+    transform: scale(1.5);
 
 }
-/* .modal-close-icon:hover,
+.modal-close-icon:hover,
 .modal-close-icon:focus {
 fill: var(--color-white);
-} */
+}
 
 
 
@@ -787,8 +805,6 @@ ul {
 }
 
 
- 
-
 /* progect-cards */
 .cards {
     display: flex;
@@ -855,27 +871,40 @@ ul {
     color: var(--primery-text-color);
     margin: 0;
 }
+
+
 /*  overlay */
 
 .card-thumb{
     position: relative;
     top: 0;
     left: 0;
+    overflow: hidden;
 }
 .overlay {
     position: absolute;
     top: 0;
     left: 0;
 
+    transform: translateY(100%);
+
     width: 100%;
     height: 100%;
     padding: 40px 32px;
     background: #4D5AE5;
+
+    transition: transform var(--anim-first);
+    /* transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
 }
 .overlay-text {
  color: #FFFFFF;
 }
 
+.card.link:hover .overlay,
+.card.link:focus .overlay {
+    transform: translateY(0);
+}
 
 /* footer */
 .footer-logo {
