--- a/css/slyle.css
+++ b/css/slyle.css
@@ -108,7 +108,7 @@ gap: 40px;
     display: block;
     padding-top: 24px;
     padding-bottom: 24px;
-    color: var(--title-text-color);
+    color: #404bbf;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -123,7 +123,7 @@ gap: 40px;
     content:"";
     display: block;
     position: absolute;
-    /* bottom: 0; */
+    bottom: -1px;
     top: 44px;
     left: 0;
     width: 100%;
@@ -237,10 +237,7 @@ gap: 40px;
     border: none;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
-    /* transition: color 250ms background-color cubic-bezier(0.4, 0, 0.2, 1) box-shadow ; */
-    transition-property: background-color, box-shadow;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color, 250ms, cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:hover,
@@ -410,9 +407,8 @@ gap: 40px;
     background-color: var(--color-iris);
    color:var(--color-cloud) ;
 
-   transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+   transition: background-color, 250ms, cubic-bezier(0.4, 0, 0.2, 1);
+
   }
 
 .social-icon {
@@ -471,17 +467,15 @@ fill: currentColor;
    border-radius: 4px;
    color:  var(--color-light-slate);
 
-    transition-property: color, border-color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+   transition: background-color, 250ms, cubic-bezier(0.4, 0, 0.2, 1);
+
 
 }
 .customer-icon {
     fill: currentColor;
 
-    transition-property: color, fill;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color, 250ms, cubic-bezier(0.4, 0, 0.2, 1);
+
 } 
 .customer-link:hover, 
 .customer-link:focus {
@@ -600,10 +594,8 @@ margin-left: auto;
     backdrop-filter: blur(2px);
     z-index: var(--modal-idx);
 
-    transition: opacity visibilitty;
-    transition-duration: 900ms;
-    transition-timing-function: ease-in-out;
-    transition-delay: 250ms;
+    transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibiity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 
 
 }
@@ -623,7 +615,7 @@ margin-left: auto;
 
 
     width: 408px;
-    height: 584px;
+    min-height: 576px;
     background-color: var(--color-dairy);
     border-radius: 4px;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 
@@ -631,12 +623,14 @@ margin-left: auto;
     0px 2px 1px rgba(0, 0, 0, 0.2);
 
     transition: opasity 250ms ease-in, transform 250ms ease-in;
+
+    /*    transition: background-color, 250ms, cubic-bezier(0.4, 0, 0.2, 1);
+ */
 }
 .backdrop.is-hidden .modal{
     opacity: 0;
     transform: translateX(-50%) translateY(-80%);
     transition-delay:0;
-
 
 }
 
@@ -654,6 +648,7 @@ top: 80px;
 
  */ 
 .modal-close-btn {
+    cursor: pointer;
  position: absolute;
  top: 24px;
  right: 24px;
@@ -668,30 +663,27 @@ top: 80px;
  background-color:  var(--color-cornflower);
  border: 1px solid rgba(0, 0, 0, 0.1);
 
-  transition-property: background-color, transform;
-    transition-duration: 250ms 500ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+   250ms cubic-bezier(0.4, 0, 0.2, 1);
     
  } 
 
 .modal-close-icon {
   fill: var(--color-grey);
 
-  transition-property: color background-color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 } 
 .modal-close-btn:hover,
 .modal-close-btn:focus {
     background-color: #404BBF;
     color: var(--color-white);
+    border: none;
     transform: scale(1.5);
 
 }
 .modal-close-icon:hover,
 .modal-close-icon:focus {
-fill: var(--color-white);
-}
+fill: #ffffff;
 
 
 
@@ -779,9 +771,8 @@ ul {
     padding-bottom: 12px;
     padding-left: 24px;
 
-    transition-property: background,color, box-shadow;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 
   }
 
@@ -850,6 +841,8 @@ ul {
     box-shadow:0px 1px 6px rgba(46, 47, 66, 0.08), 
     0px 1px 1px rgba(46, 47, 66, 0.16), 
     0px 2px 1px rgba(46, 47, 66, 0.08);
+    transform: translateY(0);
+
 }
 .img-card {
     max-width: 100%;
@@ -888,9 +881,9 @@ ul {
 
     transform: translateY(100%);
 
-    width: 100%;
+    /* width: 100%;
     height: 100%;
-    padding: 40px 32px;
+    padding: 40px 32px; */
     background: #4D5AE5;
 
     transition: transform var(--anim-first);
@@ -898,13 +891,25 @@ ul {
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
 }
 .overlay-text {
- color: #FFFFFF;
+    position: absolute;
+    top: 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--color-cloud);
+    width: 100%;
+    height: 100%;
+    padding: 40px 32px;
+    transform: translateY(100%);
+
+    transition: transform 250ms cubic-bezier(0.4 0 0.2 1);
+
 }
 
-.card.link:hover .overlay,
+/* .card.link:hover .overlay,
 .card.link:focus .overlay {
     transform: translateY(0);
-}
+} */
 
 /* footer */
 .footer-logo {
