--- a/css/slyle.css
+++ b/css/slyle.css
@@ -708,6 +708,14 @@ ul {
     margin-bottom: 0;
 }
 
+
+/* header */
+
+.site-nav-link.current::after {
+    content:"";
+    background-color: #404BBF;}
+
+
 .menu-style-portfolio {
     color: var(--title-text-color);
     font-weight: 500;
@@ -838,7 +846,6 @@ ul {
     box-shadow:0px 1px 6px rgba(46, 47, 66, 0.08), 
     0px 1px 1px rgba(46, 47, 66, 0.16), 
     0px 2px 1px rgba(46, 47, 66, 0.08);
-    transform: translateY(0);
 
 }
 .img-card {
@@ -871,7 +878,7 @@ ul {
     left: 0;
     overflow: hidden;
 }
-.overlay {
+/* .overlay {
     position: absolute;
     top: 0;
     left: 0;
@@ -884,28 +891,36 @@ ul {
     background: #4D5AE5;
 
     transition: transform var(--anim-first);
-    /* transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
-}
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+} */
 .overlay-text {
-    /* position: absolute; */
+    position: absolute;
     
     top: 0;
+    left: 0;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--color-cloud);
-    /* width: 100%;
+    width: 100%;
     height: 100%;
-    padding: 40px 32px; */
-    /* transform: translateY(100%); */
+    padding: 40px 32px; 
+    margin-top: 0;
+    background: #4D5AE5;
+    transform: translateY(100%);
 
     transition: transform 250ms cubic-bezier(0.4 0 0.2 1);
 
-}
+} 
+/* .overlay-text.link-card:hover,
+.overlay-text.link-card:focus {
+    transform: translateY(0);
 
-.card.link:hover .overlay,
-.card.link:focus .overlay {
+} */
+
+.link-card:hover .overlay-text,
+.link-card:focus .overlay-text {
     transform: translateY(0%);
 }
 
