--- a/css/slyle.css
+++ b/css/slyle.css
@@ -128,7 +128,7 @@ gap: 40px;
     left: 0;
     width: 100%;
     height: 4px;
-    /* background-color: #404BBF; */
+    background-color: #404BBF;
     border-radius: 2px;
 
 }
@@ -237,7 +237,10 @@ gap: 40px;
     border: none;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+    /* transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+ }
+.hero-button {
+ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:hover,
@@ -594,7 +597,7 @@ margin-left: auto;
     backdrop-filter: blur(2px);
     z-index: var(--modal-idx);
 
-    transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibiity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 
 
@@ -622,7 +625,7 @@ margin-left: auto;
     0px 1px 3px rgba(0, 0, 0, 0.12), 
     0px 2px 1px rgba(0, 0, 0, 0.2);
 
-    transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibiity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     /*    transition: background-color, 250ms, cubic-bezier(0.4, 0, 0.2, 1);
  */
@@ -634,19 +637,6 @@ margin-left: auto;
 
 }
 
-
-
-
-/* position: absolute;
-
-left: 516px;
-top: 80px;
-
-/* DAIRY */
-
-/* background: #FCFCFC;
-
- */ 
 .modal-close-btn {
     cursor: pointer;
  position: absolute;
@@ -663,7 +653,7 @@ top: 80px;
  background-color:  var(--color-cornflower);
  border: 1px solid rgba(0, 0, 0, 0.1);
 
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
  } 
 
@@ -713,7 +703,8 @@ ul {
 
 .site-nav-link.current::after {
     content:"";
-    background-color: #404BBF;}
+    background-color: #404BBF;
+}
 
 
 .menu-style-portfolio {
@@ -910,9 +901,14 @@ ul {
     background: #4D5AE5;
     transform: translateY(100%);
 
-    transition: transform 250ms cubic-bezier(0.4 0 0.2 1);
+    /* transition: transform 250ms cubic-bezier(0.4 0 0.2 1); */
 
 } 
+
+.overlay-text {
+    transition: transform 250ms cubic-bezier(0.4 0 0.2 1);
+
+}
 /* .overlay-text.link-card:hover,
 .overlay-text.link-card:focus {
     transform: translateY(0);
