--- a/css/slyle.css
+++ b/css/slyle.css
@@ -236,12 +236,12 @@ gap: 40px;
     border-radius: 4px;
     border: none;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-
     /* transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
  }
-.hero-button {
- transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+ .button-active {
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+
+ }
 
 .button:hover,
 .button:focus {
@@ -597,7 +597,7 @@ margin-left: auto;
     backdrop-filter: blur(2px);
     z-index: var(--modal-idx);
 
-    transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 
 
@@ -625,7 +625,7 @@ margin-left: auto;
     0px 1px 3px rgba(0, 0, 0, 0.12), 
     0px 2px 1px rgba(0, 0, 0, 0.2);
 
-    transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     /*    transition: background-color, 250ms, cubic-bezier(0.4, 0, 0.2, 1);
  */
@@ -900,20 +900,13 @@ ul {
     margin-top: 0;
     background: #4D5AE5;
     transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1)
 
     /* transition: transform 250ms cubic-bezier(0.4 0 0.2 1); */
 
 } 
 
-.overlay-text {
-    transition: transform 250ms cubic-bezier(0.4 0 0.2 1);
 
-}
-/* .overlay-text.link-card:hover,
-.overlay-text.link-card:focus {
-    transform: translateY(0);
-
-} */
 
 .link-card:hover .overlay-text,
 .link-card:focus .overlay-text {
