--- a/css/slyle.css
+++ b/css/slyle.css
@@ -236,9 +236,6 @@ gap: 40px;
     border-radius: 4px;
     border: none;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    /* transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
- }
- .button-active {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 
  }
@@ -806,12 +803,12 @@ ul {
     height: 420px;
     flex-direction: column;
 }
-/* .card:hover,
+.card:hover,
 .card:focus {
     box-shadow:0px 1px 6px rgba(46, 47, 66, 0.08), 
     0px 1px 1px rgba(46, 47, 66, 0.16), 
     0px 2px 1px rgba(46, 47, 66, 0.08);
-} */
+}
 
 /*  */
 .card-tittle {
@@ -901,18 +898,14 @@ ul {
     background: #4D5AE5;
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1)
-
-    /* transition: transform 250ms cubic-bezier(0.4 0 0.2 1); */
-
 } 
 
 
 
-.link-card:hover .overlay-text,
-.link-card:focus .overlay-text {
+.link-card:hover .overlay-text {
     transform: translateY(0%);
 }
-
+/* .link-card:focus .overlay-text */
 /* footer */
 .footer-logo {
     color: var(--color-cloud); 
