--- a/css/slyle.css
+++ b/css/slyle.css
@@ -236,8 +236,7 @@ gap: 40px;
     border-radius: 4px;
     border: none;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
-
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
 
 .button:hover,
@@ -905,7 +904,10 @@ ul {
 .link-card:hover .overlay-text {
     transform: translateY(0%);
 }
-/* .link-card:focus .overlay-text */
+.link-card:focus .overlay-text {
+    transform: translateY(0%);
+}
+
 /* footer */
 .footer-logo {
     color: var(--color-cloud); 
