--- a/css/slyle.css
+++ b/css/slyle.css
@@ -763,7 +763,7 @@ ul {
     padding-bottom: 12px;
     padding-left: 24px;
 
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 
   }
@@ -901,12 +901,13 @@ ul {
 
 
 
-.link-card:hover .overlay-text {
+.link:hover .overlay-text,
+.link:focus .overlay-text  {
     transform: translateY(0%);
 }
-.link-card:focus .overlay-text {
+/* .link-card:focus .overlay-text {
     transform: translateY(0%);
-}
+} */
 
 /* footer */
 .footer-logo {
