--- a/css/slyle.css
+++ b/css/slyle.css
@@ -214,7 +214,7 @@ gap: 40px;
     letter-spacing: 0.02em;
 }
 
-.hero-button {
+.hero-button-active {
     display: block;
     flex-direction: row;
     align-items: flex-start;
@@ -239,8 +239,8 @@ gap: 40px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
 
-.button:hover,
-.button:focus {
+.hero-button-active:hover,
+.hero-button-active:focus {
     background-color: #404BBF;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
@@ -252,9 +252,9 @@ gap: 40px;
     padding-bottom: 0;
 }
 
-.button-active:hover {
+/* .button-active:hover {
    background-color: var(--color-ocean);
-}
+} */
 
 /* about */
 
@@ -747,7 +747,7 @@ ul {
     gap: 24px;
 
 }
-.button-active {
+.filter-button {
     cursor: pointer;
     background: var(--color-cloud);
     color: var(--color-iris);
@@ -763,14 +763,14 @@ ul {
     padding-bottom: 12px;
     padding-left: 24px;
 
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition:  color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 
   }
 
 
-.button-active:hover,
-.button-active:focus {
+.filter-button:hover,
+.filter-button:focus {
    
     cursor: pointer;
     background: var(--color-ocean);
