--- a/css/slyle.css
+++ b/css/slyle.css
@@ -108,12 +108,11 @@ gap: 40px;
     display: block;
     padding-top: 24px;
     padding-bottom: 24px;
-    color: #404bbf;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-
+    color: #2E2F42;
     transition-property: color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -124,7 +123,22 @@ gap: 40px;
     display: block;
     position: absolute;
     bottom: -1px;
-    top: 44px;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    /* background-color: #404BBF; */
+    border-radius: 2px;
+
+}
+
+.site-nav-link.current::after {
+    content:"";
+    /* background-color: #404BBF; */
+    /* content:""; */
+    display: block;
+    position: absolute;
+    bottom: -1px;
+    /* top: 44px; */
     left: 0;
     width: 100%;
     height: 4px;
@@ -133,15 +147,9 @@ gap: 40px;
 
 }
 
-.site-nav-link.current::after {
-    content:"";
-    background-color: #404BBF;
-
-}
-
 .site-nav .link:hover, 
 .site-nav .link:focus {
-    color: var(--color-ocean);
+    color:  #404bbf; 
 }
 
 
